feat: create asset
